finished about page

--- a/hopkins/www/css/ionic.app.css
+++ b/hopkins/www/css/ionic.app.css
@@ -9750,4 +9750,5 @@ a.button {
   margin: auto; }
 
 .about-card {
-  border: 1px solid #2F83B6; }
+  border: 1px solid #2F83B6;
+  margin-top: 20%; }
