--- a/hopkins/www/templates/about.html
+++ b/hopkins/www/templates/about.html
@@ -6,14 +6,11 @@
 					<img class="full-image" src="../img/logo_icon.svg">
 				</div>
 				<p>
-					This is a "Facebook" styled Card. The header is created from a Thumbnail List item,
-					the content is from a card-body consisting of an image and paragraph text. The footer
-					consists of tabs, icons aligned left, within the card-footer.
+					Hopkins Tax & Accounting is a client focused, mobile tax and accounting firm. We specialize in complex tax matters, tax preparation, tax planning, financial goal setting and resolving tax issues.
 				</p>
-<!-- 				<p>
-					<a href="#" class="subdued">1 Like</a>
-					<a href="#" class="subdued">5 Comments</a>
-				</p> -->
+				<p>
+					It is our goal to build meaningful business relationships with each of our clients, in order to serve them better.
+				</p>
 			</div>
 		</div>
 	</ion-content>
