finished styling for contact us page

--- a/hopkins/scss/ionic.app.scss
+++ b/hopkins/scss/ionic.app.scss
@@ -51,3 +51,7 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 	border: 1px solid #2F83B6;
 	margin-top: 20%;
 }
+
+.icon-color {
+	color: #2F83B6;
+}
