--- a/hopkins/www/templates/contact.html
+++ b/hopkins/www/templates/contact.html
@@ -1,5 +1,44 @@
 <ion-view view-title="Contact Us">
 	<ion-content>
-		<h1>Contact Us</h1>
+		<div class="list">
+			<div class="item item-divider">
+				Contact Info
+			</div>
+
+			<a class="item item-icon-left item-icon-right" href="#">
+				<i class="icon ion-ios-telephone icon-color"></i>
+					512 - 829 - 1088
+				<i class="icon ion-ios-arrow-right"></i>
+			</a>
+
+			<a class="item item-icon-left item-icon-right" href="#">
+				<i class="icon ion-email icon-color"></i>
+					info@hopkinstaxaccounting.com
+				<i class="icon ion-ios-arrow-right"></i>
+			</a>
+
+			<div class="item item-divider">
+				Social
+			</div>
+
+			<a class="item item-icon-left item-icon-right" href="#">
+				<i class="icon ion-social-linkedin icon-color"></i>
+					charleshopkins
+				<i class="icon ion-ios-arrow-right"></i>
+			</a>
+
+			<a class="item item-icon-left item-icon-right" href="#">
+				<i class="icon ion-social-facebook icon-color"></i>
+					hopkinstaxaccounting
+				<i class="icon ion-ios-arrow-right"></i>
+			</a>
+
+			<a class="item item-icon-left item-icon-right" href="#">
+				<i class="icon ion-social-twitter icon-color"></i>
+					hopkinstaxact
+				<i class="icon ion-ios-arrow-right"></i>
+			</a>
+
+		</div>
 	</ion-content>
 </ion-view>
