styling for testimonial page

--- a/hopkins/scss/ionic.app.scss
+++ b/hopkins/scss/ionic.app.scss
@@ -55,3 +55,8 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 .icon-color {
 	color: #2F83B6;
 }
+
+.author-quote {
+	color: #2F83B6;
+	font-weight: bold;
+}
