--- a/hopkins/www/templates/menu.html
+++ b/hopkins/www/templates/menu.html
@@ -24,16 +24,16 @@
 				<ion-item menu-close href="#/app/contact">
 					Contact Us
 				</ion-item>
-				<ion-item menu-close href="#/app/browse">
+				<ion-item menu-close href="#/app/test">
 					Testimonials
 				</ion-item>
-				<ion-item menu-close href="#/app/playlists">
+				<ion-item menu-close href="#/app/new">
 					New Client
 				</ion-item>
-				<ion-item menu-close href="#/app/playlists">
+				<ion-item menu-close href="#/app/return">
 					Returning Client
 				</ion-item>
-				<ion-item menu-close href="#/app/playlists">
+				<ion-item menu-close href="#/app/gaurantee">
 					Gaurantee
 				</ion-item>
 			</ion-list>
