fixed broken images

--- a/hopkins/www/templates/about.html
+++ b/hopkins/www/templates/about.html
@@ -3,7 +3,7 @@
 		<div class="list card about-card">
 			<div class="item item-body">
 				<div class="about-img">
-					<img class="full-image" src="../img/about_us.svg">
+					<img class="full-image" src="img/about_us.svg">
 				</div>
 				<p>
 					Hopkins Tax & Accounting is a client focused, mobile tax and accounting firm. We specialize in complex tax matters, tax preparation, tax planning, financial goal setting and resolving tax issues.
