--- a/hopkins/www/templates/gaurantee.html
+++ b/hopkins/www/templates/gaurantee.html
@@ -3,7 +3,7 @@
 		<div class="list card about-card">
 			<div class="item item-body">
 				<div class="about-img">
-					<img class="full-image" src="../img/gaurantee.svg">
+					<img class="full-image" src="img/gaurantee.svg">
 				</div>
 				<p>
 					We want to help you. After our first consultation, we will be able to understand a clear picture of your situation, then we can find the most appropriate method to resolving your tax situation.
