--- a/hopkins/www/templates/playlists.html
+++ b/hopkins/www/templates/playlists.html
@@ -2,7 +2,7 @@
 	<ion-content>
 		<section class="home-content">
 			<div class="header-home">
-	 			<img src="../img/Hopkins_Full_Logo.svg">
+	 			<img src="img/Hopkins_Full_Logo.svg">
 			</div>
 			<button class="button button-block button-positive home-btn">
 				New Client
