new client checklist

--- a/hopkins/scss/ionic.app.scss
+++ b/hopkins/scss/ionic.app.scss
@@ -60,3 +60,16 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 	color: #2F83B6;
 	font-weight: bold;
 }
+
+.card-img {
+	width: 150px;
+}
+
+.img-align {
+	text-align: center;
+}
+
+.card-copy {
+	text-align: left;
+	line-height: 1.5;
+}
