--- a/hopkins/www/css/ionic.app.css
+++ b/hopkins/www/css/ionic.app.css
@@ -9759,3 +9759,13 @@ a.button {
 .author-quote {
   color: #2F83B6;
   font-weight: bold; }
+
+.card-img {
+  width: 150px; }
+
+.img-align {
+  text-align: center; }
+
+.card-copy {
+  text-align: left;
+  line-height: 1.5; }
