returning client styles

--- a/hopkins/www/templates/playlists.html
+++ b/hopkins/www/templates/playlists.html
@@ -4,10 +4,10 @@
 			<div class="header-home">
 	 			<img src="img/Hopkins_Full_Logo.svg">
 			</div>
-			<button class="button button-block button-positive home-btn">
+			<button class="button button-block button-positive home-btn" href="#/app/new">
 				New Client
 			</button>
-			<button class="button button-block button-calm home-btn1">
+			<button class="button button-block button-calm home-btn1" href="#/app/return">
 				Returning Client
 			</button>
 		</section>
