fixed in app browser bugs

--- a/hopkins/www/templates/new.html
+++ b/hopkins/www/templates/new.html
@@ -30,7 +30,7 @@
 					As a first time client, and so we can provide you with the quickest most accurate TAX refund experience. Please complete this form in it’s entirety to the best of your knowledge. The average time for completing the organizer is 10 - 20 min.
 				</p>
 			</div>
-			<a class="item item-icon-left assertive" ng-click = "openBrowser()">
+			<a class="item item-icon-left assertive" ng-click = "openInAppBrowser()">
 				<i class="icon ion-ios-arrow-thin-right"></i>
 				Complete Tax Organizer
 			</a>
