--- a/hopkins/www/templates/menu.html
+++ b/hopkins/www/templates/menu.html
@@ -13,7 +13,7 @@
 	</ion-side-menu-content>
 
 	<ion-side-menu side="left">
-		<ion-header-bar class="bar-stable">
+		<ion-header-bar class="bar-stable" ui-sref="app.home">
 			<h1 class="title">Menu</h1>
 		</ion-header-bar>
 		<ion-content>
